Fix spacing between user stats

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
 .user-info ul li {
   display: flex;
   align-items: center;
+  margin-right: 1.0rem;
 }
 
 .user-info ul li strong {
